name:                yesod-auth-simple
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/jabaraster/yesod-auth-simple
license:             MIT
license-file:        LICENSE
author:              jabaraster
maintainer:          ah@jabara.info
copyright:           2016 jabaraster Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , yesod-core                    >= 1.4.17     && < 1.5
                     , yesod-auth                    >= 1.3        && < 1.5
                     , yesod-form                    >= 1.4.0      && < 1.5
                     , text                          >= 0.11       && < 2.0

  exposed-modules: Yesod.Auth.Simple

executable yesod-auth-simple
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

